tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_z_centers_viewport.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 40,
    top_line: 30,
    active_file: None,
    tree_visible: false,
    visual_anchor: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "",
    full_context: false,
}
