tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__visual_j_clamps_at_file_boundary.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 29,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Visual,
    status_message: "",
    full_context: false,
    visual_anchor: 28,
}
